--- a/data/popup.html
+++ b/data/popup.html
@@ -22,6 +22,9 @@
   <div id="blockedResources">Loading...</div>
 </div>
 
-<center><a id='helplink' class='hidePanel' href='https://www.eff.org/privacybadger' target=_blank tabindex=-1 title="Privacy Badger Website">Frequently Asked Questions</a></center>
+<center><a id='helplink' class='hidePanel' href='https://www.eff.org/privacybadger'
+  target=_blank tabindex=-1 title="Privacy Badger Website"
+  data-l10n-id="faq"
+  >Frequently Asked Questions</a></center>
 </body>
 </html>
