--- a/data/popup.html
+++ b/data/popup.html
@@ -24,7 +24,6 @@
 
 <center><a id='helplink' class='hidePanel' href='https://www.eff.org/privacybadger'
   target=_blank tabindex=-1 title="Privacy Badger Website"
-  data-l10n-id="faq"
-  >Frequently Asked Questions</a></center>
+  data-l10n-id="faq"></a></center>
 </body>
 </html>
